bitfield/tests/11-bits-attribute-wrong.stderr
error[E0308]: mismatched types
  --> tests/11-bits-attribute-wrong.rs:11:14
   |
9  | #[bitfield]
   | ----------- help: consider specifying the actual array length: `1`
10 | pub struct RedirectionTableEntry {
11 |     #[bits = 9]
   |              ^ expected an array with a fixed size of 9 elements, found one with 1 element
